更新pom，全面采用maven2进行开发
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3426 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -1,285 +1,283 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.bjmaxinfo.corner</groupId>
-	<artifactId>corner</artifactId>
-	<name>corner</name>
-	<version>2.4</version>
-	<packaging>jar</packaging>
-	<description>Provides some core function</description>
-	<inceptionYear>2005-2007</inceptionYear>
-	<organization>
-		<name>Beijing Maxinfo Technology Ltd.</name>
-		<url>http://www.bjmaxinfo.com/</url>
-	</organization>
-	<issueManagement>
-		<system>trac</system>
-		<url>http://dev.bjmaxinfo.com/projects/corner/newticket</url>
-	</issueManagement>
-	<developers>
-		<developer>
-			<id>jcai</id>
-			<name>Jun Tsai</name>
-			<email>Jun.Tsai@bjmaxinfo.com</email>
-			<organization>Beijing Maxinfo</organization>
-			<roles>
-				<role>Team Leader</role>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>ghostbb</id>
-			<name>Xin Zhao</name>
-			<email>ghostbb@bjmaxinfo.com</email>
-			<organization>Beijing Maxinfo</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-	</developers>
-	
-	<scm>
-		<connection> scm:svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
-		<url> http://dev.bjmaxinfo.com/projects/corner/browser/trunk/corner</url>
-	</scm>
-	
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<includes>
-					<include>**</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>src/main/java</directory>
-				<includes>
-					<include>**/*</include>
-				</includes>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>src/main/js</directory>
-				<includes>
-					<include>corner/**/*</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antlr-plugin</artifactId>
-				<configuration>
-					<grammars>/corner/expression/calc/calc.g</grammars>
-					<outputDirectory>${basedir}/src/main/antlr</outputDirectory>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-					<optimize>true</optimize>
-				</configuration>
-			</plugin>
-			
-		</plugins>
-	</build>
-	<dependencies>
-		<!-- runtime -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
-			<version>1.2.9</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>mail</artifactId>
-					<groupId>javax.mail</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate</artifactId>
-			<version>3.2.4.sp1</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jta</artifactId>
-					<groupId>javax.transaction</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.3.0.ga</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>3.3.0.ga</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-jta_1.0.1B_spec</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-javamail_1.3.1_spec</artifactId>
-			<version>1.3</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-			<version>1.0</version>
-		</dependency>
-		
-		<!-- compile -->
-		<dependency>
-			<groupId>org.apache.tapestry</groupId>
-			<artifactId>tapestry-framework</artifactId>
-			<version>${tapestry-release-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tapestry</groupId>
-			<artifactId>tapestry-annotations</artifactId>
-			<version>${tapestry-release-version}</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tapestry</groupId>
-			<artifactId>tapestry-contrib</artifactId>
-			<version>${tapestry-release-version}</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>5.5</version>
-			<classifier>jdk15</classifier>
-			<scope>compile</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.0-FINAL</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.lowagie</groupId>
-			<artifactId>itext</artifactId>
-			<version>2.0.5</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>2.0.1</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.openqa.selenium.server</groupId>
-			<artifactId>selenium-server</artifactId>
-			<version>0.9.0</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-mock</artifactId>
-			<version>1.2.9</version>
-			<optional>true</optional>
-			<scope>compile</scope>
-		</dependency>
-		<!-- provided -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.3</version>
-			<scope>provided</scope>
-		</dependency>
-		
-		<!-- test -->
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<version>2.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>0.9.1.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.7</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tapestry</groupId>
-			<artifactId>tapestry-test</artifactId>
-			<version>${tapestry-release-version}</version>
-			<scope>test</scope>
-		</dependency>
-		
-	</dependencies>
-	
-	<repositories>
-		<repository>
-			<id>central</id>
-			<name>maxinfo</name>
-			<url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
-		</repository>
-		
-		<repository>
-			<id>snapshots</id>
-			<url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-		
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>central</id>
-			<url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-		<pluginRepository>
-			<id>snapshots</id>
-			<url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</pluginRepository>
-	</pluginRepositories>
-	
-	<distributionManagement>
-		<site>
-			<id>maxinfo</id>
-			<url>scp://dev.bjmaxinfo.com/opt/sites/corner</url>
-			<name>jcai</name>
-		</site>
-	</distributionManagement>
-	<properties>
-		<tapestry-release-version>4.1.2</tapestry-release-version>
-	</properties>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.bjmaxinfo.corner</groupId>
+  <artifactId>corner</artifactId>
+  <name>corner</name>
+  <version>2.4-SNAPSHOT</version>
+  <description>Provides some core function</description>
+  <issueManagement>
+    <system>trac</system>
+    <url>http://dev.bjmaxinfo.com/projects/corner/newticket</url>
+  </issueManagement>
+  <inceptionYear>2005-2007</inceptionYear>
+  <developers>
+    <developer>
+      <id>jcai</id>
+      <name>Jun Tsai</name>
+      <email>Jun.Tsai@bjmaxinfo.com</email>
+      <organization>Beijing Maxinfo</organization>
+      <roles>
+        <role>Team Leader</role>
+        <role>Developer</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>ghostbb</id>
+      <name>Xin Zhao</name>
+      <email>ghostbb@bjmaxinfo.com</email>
+      <organization>Beijing Maxinfo</organization>
+      <roles>
+        <role>Developer</role>
+      </roles>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
+    <url>http://dev.bjmaxinfo.com/projects/corner/browser/trunk/corner</url>
+  </scm>
+  <organization>
+    <name>Beijing Maxinfo Technology Ltd.</name>
+    <url>http://www.bjmaxinfo.com/</url>
+  </organization>
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>src/main/js</directory>
+        <includes>
+          <include>corner/**/*</include>
+        </includes>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <artifactId>maven-antlr-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <grammars>/corner/expression/calc/calc.g</grammars>
+          <outputDirectory>${basedir}/src/main/antlr</outputDirectory>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+          <optimize>true</optimize>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <repositories>
+    <repository>
+      <id>central</id>
+      <name>maxinfo</name>
+      <url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
+    </repository>
+    <repository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <id>snapshots</id>
+      <url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
+    </pluginRepository>
+    <pluginRepository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <id>snapshots</id>
+      <url>http://dev.bjmaxinfo.com:8080/artifactory/repo</url>
+    </pluginRepository>
+  </pluginRepositories>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+      <version>1.2.9</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>mail</artifactId>
+          <groupId>javax.mail</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate</artifactId>
+      <version>3.2.4.sp1</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>jta</artifactId>
+          <groupId>javax.transaction</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+      <version>3.3.0.ga</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-commons-annotations</artifactId>
+      <version>3.3.0.ga</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>persistence-api</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tapestry</groupId>
+      <artifactId>tapestry-framework</artifactId>
+      <version>${tapestry-release-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tapestry</groupId>
+      <artifactId>tapestry-annotations</artifactId>
+      <version>${tapestry-release-version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tapestry</groupId>
+      <artifactId>tapestry-contrib</artifactId>
+      <version>${tapestry-release-version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.0-FINAL</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.lowagie</groupId>
+      <artifactId>itext</artifactId>
+      <version>2.0.5</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>jasperreports</groupId>
+      <artifactId>jasperreports</artifactId>
+      <version>2.0.1</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.openqa.selenium.server</groupId>
+      <artifactId>selenium-server</artifactId>
+      <version>0.9.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-mock</artifactId>
+      <version>1.2.9</version>
+      <scope>compile</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.3</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>2.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.1.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>1.8.0.7</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tapestry</groupId>
+      <artifactId>tapestry-test</artifactId>
+      <version>${tapestry-release-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+				<artifactId>testng</artifactId>
+				<version>5.5</version>
+				<classifier>jdk15</classifier>
+				<scope>provided</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>junit</groupId>
+						<artifactId>junit</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+  </dependencies>
+  <distributionManagement>
+    <site>
+      <id>maxinfo</id>
+      <name>jcai</name>
+      <url>scp://dev.bjmaxinfo.com/opt/sites/corner</url>
+    </site>
+	  <repository>
+      <id>maxinfo-release</id>
+      <name>bjmaxinfo release </name>
+      <url>http://dev.bjmaxinfo.com:8080/artifactory/libs-releases@repo</url>
+    </repository>
+	  <snapshotRepository>
+      <id>maxinfo-snapshot</id>
+      <name>bjmaxinfo snapshot </name>
+      <url>http://dev.bjmaxinfo.com:8080/artifactory/libs-snapshots@repo</url>
+    </snapshotRepository>
+  </distributionManagement>
+  <properties>
+    <tapestry-release-version>4.1.3</tapestry-release-version>
+  </properties>
 </project>
+
