--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,10 @@
           <artifactId>mail</artifactId>
           <groupId>javax.mail</groupId>
         </exclusion>
+        <exclusion>
+			<artifactId>avalon-framework</artifactId>
+			<groupId>avalon-framework</groupId>
+		</exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -158,11 +162,6 @@
       <version>1.1</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
-      <version>1.3</version>
-    </dependency>
-    <dependency>
       <groupId>com.google.code.guice</groupId>
       <artifactId>guice</artifactId>
       <version>1.0</version>
@@ -173,22 +172,32 @@
       <version>1.0</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
+      <version>1.3</version>
+      <optional>true</optional>
+    </dependency>
+    
+    <!-- tapestry library -->
+    <dependency>
       <groupId>org.apache.tapestry</groupId>
       <artifactId>tapestry-framework</artifactId>
       <version>${tapestry-release-version}</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.apache.tapestry</groupId>
       <artifactId>tapestry-annotations</artifactId>
       <version>${tapestry-release-version}</version>
-      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.apache.tapestry</groupId>
       <artifactId>tapestry-contrib</artifactId>
       <version>${tapestry-release-version}</version>
-      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
+    <!-- poi -->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
@@ -217,7 +226,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-mock</artifactId>
       <version>1.2.9</version>
-      <scope>compile</scope>
+      <scope>test</scope>
       <optional>true</optional>
     </dependency>
     <dependency>
