--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,21 @@
 				</execution>
 			</executions>
 		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.3</version>
+			<inherited>true</inherited>
+			<configuration>
+				<systemProperties>
+					<property>
+						<name>user.language</name>
+						<value>en_US</value>
+					</property>
+				</systemProperties>
+				<excludedGroups>integration</excludedGroups>
+			</configuration>
+		</plugin>
     </plugins>
   </build>
   <repositories>
@@ -222,6 +237,12 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>com.lowagie</groupId>
+      <artifactId>itextasian</artifactId>
+      <version>20060413</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>jasperreports</groupId>
       <artifactId>jasperreports</artifactId>
       <version>2.0.1</version>
@@ -273,7 +294,7 @@
     <dependency>
       <groupId>org.testng</groupId>
 				<artifactId>testng</artifactId>
-				<version>5.5</version>
+				<version>5.1</version>
 				<classifier>jdk15</classifier>
 				<scope>provided</scope>
 				<exclusions>
