--- a/pom.xml
+++ b/pom.xml
@@ -250,16 +250,11 @@
     </dependency>
 
     <dependency>
-      <groupId>org.openqa.selenium.client-drivers</groupId>
-      <artifactId>selenium-java-client-driver</artifactId>
-      <version>0.8.1</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.openqa.selenium.server</groupId>
       <artifactId>selenium-server</artifactId>
       <version>0.8.1</version>
       <scope>compile</scope>
+	 <optional>true</optional>
     </dependency>
 	  
 	  
