加入通知人信息
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3452 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,22 @@
     <url>http://dev.bjmaxinfo.com/projects/corner/newticket</url>
   </issueManagement>
   <inceptionYear>2005-2007</inceptionYear>
+	<ciManagement>
+		<system>continuum</system>
+		<notifiers>
+			<notifier>
+				<type>jabber</type>
+				<configuration>
+					<address>jcai@bjmaxinfo.com,ghostbb@bjmaxinfo.com,xf@bjmaxinfo.com,lsq@bjmaxinfo.com</address>
+					<port>5222</port>
+					<from-password>maven</from-password>
+					<host>dev.bjmaxinfo.com</host>
+					<from-address>maven</from-address>
+					<sslConnection>false</sslConnection>
+				</configuration>
+			</notifier>
+		</notifiers>
+	</ciManagement>
   <developers>
     <developer>
       <id>jcai</id>
