加入资源文件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3458 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,23 @@
         </includes>
       </resource>
     </resources>
+   <testResources>
+	   <testResource>
+        <directory>src/test/java</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+   	   </testResource>
+	   <testResource>
+		   <directory>src/test/resources</directory>
+		   <includes>
+          <include>**</include>
+        </includes>
+	   </testResource>
+	  </testResources>
     <plugins>
       <plugin>
         <artifactId>maven-antlr-plugin</artifactId>
