--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,6 @@
 						<value>en_US</value>
 					</property>
 				</systemProperties>
-				<!-- excludedGroups>integration</excludedGroups -->
 			</configuration>
 		</plugin>
     </plugins>
@@ -282,6 +281,13 @@
       <optional>true</optional>
     </dependency>
 
+	  <dependency>
+      <groupId>org.openqa.selenium.client-drivers</groupId>
+      <artifactId>selenium-java-client-driver</artifactId>
+      <version>0.8.1</version>
+      <scope>compile</scope>
+ 	 <optional>true</optional>
+    </dependency>
     <dependency>
       <groupId>org.openqa.selenium.server</groupId>
       <artifactId>selenium-server</artifactId>
