--- a/pom.xml
+++ b/pom.xml
@@ -277,7 +277,7 @@
     <dependency>
       <groupId>jasperreports</groupId>
       <artifactId>jasperreports</artifactId>
-      <version>2.0.1</version>
+      <version>2.0.1.patch.2</version>
       <optional>true</optional>
     </dependency>
 
