--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,19 @@
 					</systemProperties>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura-plugin-version}</version>
+				<executions>
+					<execution>
+						<id>clean</id>
+						<goals>
+							<goal>clean</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<repositories>
@@ -370,8 +383,8 @@
 					<linksource>true</linksource>
 					<links>
 						<link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-						<link> http://jakarta.apache.org/commons/logging/apidocs/</link>
-						<link> http://tapestry.apache.org/tapestry5/tapestry-ioc/apidocs/</link>
+						<link>http://jakarta.apache.org/commons/logging/apidocs/</link>
+						<link>http://tapestry.apache.org/tapestry5/tapestry-ioc/apidocs/</link>
 					</links>
 					<linksource>true</linksource>
 					<encoding>utf-8</encoding>
@@ -399,5 +412,6 @@
 	</distributionManagement>
 	<properties>
 		<tapestry-release-version>4.1.3</tapestry-release-version>
+		<cobertura-plugin-version>2.0</cobertura-plugin-version>
 	</properties>
 </project>
