--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,13 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<tagBase>http://dev.bjmaxinfo.com/svn/corner/tags/</tagBase>
+					<preparationGoals>deploy</preparationGoals>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<repositories>
