--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.bjmaxinfo.corner</groupId>
 	<artifactId>corner</artifactId>
 	<name>corner</name>
-	<version>2.4-SNAPSHOT</version>
+	<version>2.4</version>
 	<description>Provides some core function</description>
 	<issueManagement>
 		<system>trac</system>
@@ -49,8 +49,8 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection>scm:svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
-		<url>http://dev.bjmaxinfo.com/projects/corner/browser/trunk/corner</url>
+		<connection>scm:svn:http://dev.bjmaxinfo.com/svn/corner/tags/corner-2.4</connection>
+		<url>http://dev.bjmaxinfo.com/projects/corner/browser/tags/corner-2.4</url>
 	</scm>
 	<organization>
 		<name>Beijing Maxinfo Technology Ltd.</name>
