--- a/pom.xml
+++ b/pom.xml
@@ -347,6 +347,12 @@
 			<version>1.8.0.7</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- subversion client -->
+		<dependency>
+			<groupId>org.tmatesoft</groupId>
+			<artifactId>svnkit</artifactId>
+			<version>1.1.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
 			<artifactId>tapestry-test</artifactId>
