将svnkitService变成普通的service
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3562 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
 				<role>Developer</role>
 			</roles>
 		</developer>
+		<developer>
+			<id>xiafei</id>
+			<name>Fei Xia</name>
+			<email>xf@bjmaxinfo.com</email>
+			<organization>Beijing Maxinfo</organization>
+			<roles>
+				<role>Developer</role>
+			</roles>
+		</developer>
 	</developers>
 	<scm>
 		<connection>scm:svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
