--- a/pom.xml
+++ b/pom.xml
@@ -309,7 +309,22 @@
 			<version>2.0.1.patch.2</version>
 			<optional>true</optional>
 		</dependency>
+		<!-- subversion client -->
+		<dependency>
+			<groupId>org.tmatesoft</groupId>
+			<artifactId>svnkit</artifactId>
+			<version>1.1.2</version>
+			<optional>true</optional>
+		</dependency>
+		<!-- xstream -->
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.2.2</version>
+			<optional>true</optional>
+		</dependency>
 		
+			
 		<dependency>
 			<groupId>org.openqa.selenium.client-drivers</groupId>
 			<artifactId>selenium-java-client-driver</artifactId>
@@ -355,12 +370,6 @@
 			<artifactId>hsqldb</artifactId>
 			<version>1.8.0.7</version>
 			<scope>test</scope>
-		</dependency>
-		<!-- subversion client -->
-		<dependency>
-			<groupId>org.tmatesoft</groupId>
-			<artifactId>svnkit</artifactId>
-			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
