删掉名字后的句号
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3591 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 		<url>http://dev.bjmaxinfo.com/projects/corner/browser/trunk/corner</url>
 	</scm>
 	<organization>
-		<name>Beijing Maxinfo Technology Ltd.</name>
+		<name>Beijing Maxinfo Technology Ltd</name>
 		<url>http://www.bjmaxinfo.com/</url>
 	</organization>
 	<build>
