--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="corner"  basedir=".">
+<project name="corner"  basedir="." xmlns:artifact="urn:maven-artifact-ant">
     <path id="maven-ant-tasks.classpath" path="support/ant-lib/maven-ant-tasks-2.0.7.jar"/>
     <typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="urn:maven-artifact-ant"
              classpathref="maven-ant-tasks.classpath"/>
