--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
-			<version>1.2.9</version>
+			<version>${spring-release-version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>mail</artifactId>
@@ -225,7 +225,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate</artifactId>
-			<version>3.2.5.ga</version>
+			<version>${hibernate-release-version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>jta</artifactId>
@@ -453,6 +453,8 @@
 	</distributionManagement>
 	<properties>
 		<tapestry-release-version>4.1.3</tapestry-release-version>
+		<spring-release-version>1.2.9</spring-release-version>
+		<hibernate-release-version>3.2.5.ga</hibernate-release-version>
 		<cobertura-plugin-version>2.0</cobertura-plugin-version>
 	</properties>
 </project>
