--- a/src/test/resources/database/h2-dev.properties
+++ b/src/test/resources/database/h2-dev.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:file:database/testdb
+jdbc.url=jdbc:h2:database/testdb
 jdbc.username=sa
 jdbc.password=
 
@@ -7,3 +7,9 @@ jdbc.password=
 database.lobHandler=defaultLobHandler
 #for hibernate
 hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
+hibernate.connection.driver_class=org.h2.Driver
+hibernate.connection.username=sa
+hibernate.connection.password=
+hibernate.connection.url=jdbc:h2:database/testdb
