--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 #for database
-config.import.database=classpath:/database/h2-test.properties
-#config.import.database=classpath:/database/h2-dev.properties
+#config.import.database=classpath:/database/h2-test.properties
+config.import.database=classpath:/database/h2-dev.properties
 #for hibernate
 hibernate.mapping.locations=classpath:/corner/demo/model/
