升级了corner版本为2.5.2,整合简单整合XFire
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4342 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,4 +77,14 @@
 		<servlet-name>demo</servlet-name>
 		<url-pattern>/assets/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>demo</servlet-name>
+		<url-pattern>*.xfire</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>demo</servlet-name>
+		<url-pattern>*.wsdl</url-pattern>
+	</servlet-mapping>
 </web-app>
