--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.bjmaxinfo.corner</groupId>
 	<artifactId>corner</artifactId>
 	<name>corner</name>
-	<version>2.5.1-SNAPSHOT</version>
+	<version>2.5.2-SNAPSHOT</version>
 	<description>Provides some core function</description>
 	<issueManagement>
 		<system>trac</system>
@@ -406,6 +406,48 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+	    <!-- for xfire -->
+	    <dependency>
+	      <groupId>org.codehaus.xfire</groupId>
+	      <artifactId>xfire-core</artifactId>
+	      <version>1.2.6</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.codehaus.xfire</groupId>
+	      <artifactId>xfire-spring</artifactId>
+	      <version>1.2.6</version>
+	    </dependency>
+
+	    <dependency>
+	      <groupId>org.codehaus.xfire</groupId>
+	      <artifactId>xfire-jaxb2</artifactId>
+	      <version>1.2.6</version>
+	    </dependency>
+	    <!--
+		<dependency>
+	      <groupId>org.codehaus.xfire</groupId>
+	      <artifactId>xfire-xmlbeans</artifactId>
+	      <version>1.2.6</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.codehaus.xfire</groupId>
+	      <artifactId>xfire-generator</artifactId>
+	      <version>1.2.6</version>
+	    </dependency>
+	    
+	    <dependency>
+	      <groupId>org.codehaus.xfire</groupId>
+	      <artifactId>xfire-jaxws</artifactId>
+	      <version>1.2.6</version>
+	    </dependency>
+	     
+	   	<dependency>
+	      <groupId>org.codehaus.xfire</groupId>
+	      <artifactId>xfire-ws-security</artifactId>
+	      <version>1.2.6</version>
+	    </dependency>
+	     -->
 	</dependencies>
 	<reporting>
 		<plugins>
