--- a/pom.xml
+++ b/pom.xml
@@ -123,9 +123,10 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
 				<configuration>
-					<source>2.0.2</source>
-					<target>2.0.2</target>
+					<source>1.5</source>
+					<target>1.5</target>
 					<optimize>true</optimize>
 				</configuration>
 			</plugin>
