修改了svn测试地址
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4385 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/database/h2-dev.properties
+++ b/src/test/resources/database/h2-dev.properties
@@ -8,6 +8,10 @@ database.lobHandler=defaultLobHandler
 #for hibernate
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+#for SVN
+svn.url=http://dev.bjmaxinfo.com/svn/svn-test
+svn.username=jetty
+svn.password=jetty205@bjmaxinfo.com
 
 hibernate.connection.driver_class=org.h2.Driver
 hibernate.connection.username=sa
