--- a/src/test/resources/database/h2-test.properties
+++ b/src/test/resources/database/h2-test.properties
@@ -7,3 +7,8 @@ jdbc.password=
 database.lobHandler=defaultLobHandler
 #for hibernate
 hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+#for SVN
+svn.url=http://dev.bjmaxinfo.com/svn/svn-test
+svn.username=jetty
+svn.password=jetty205@bjmaxinfo.com
